--- a/index.css
+++ b/index.css
@@ -6,3 +6,14 @@
     width: 500px;
     margin: 50px;
 }
+.flex-container {
+    display: flex;
+    background-color: DodgerBlue;
+  }
+  
+  .flex-container > div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+  }
